# zarr_stores

./: README.md  setup.cfg  setup.py
zarr_stores/: h5_nested_store.py
zarr_stores/examples/: migrate_s3_store_to_local_h5_nested_store.py  migrate_s3_store_to_local_h5_nested_store_recompress_arrays.py
