[metadata]
name = zarr_stores 

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/zarr_stores
license = BSD-3-Clause
description = Custom zarr storage classes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/zarr_stores/issues
    Documentation = https://github.com/CBI-PITT/zarr_stores#README.md
    Source Code = https://github.com/CBI-PITT/zarr_stores
    User Support = https://github.com/CBI-PITT/zarr_stores

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    zarr
	numpy
	numcodecs
	h5py
	dask
	distributed